# vulkan

./: README.md
rust/: Cargo.toml
rust/core/: Cargo.toml
rust/core/src/: alloc.rs  base.rs  debug.rs  device.rs  error.rs  lib.rs  surface.rs  swapchain.rs
rust/iface/: Cargo.toml
rust/iface/src/: context.rs
rust/pelkan-core/: Cargo.toml
rust/pelkan-core/src/: glob.rs  interface.rs  lib.rs  swapchain.rs
rust/test-app/: Cargo.toml
rust/test-app/src/: interface.rs  main.rs
sdl3/: .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md
sdl3/samples/: app.h  compute.cc  gltf.h  gltf_pbr.cc  gltf_pbr.h  gltf_textures.cc  imageless_framebuffer.cc  imageless_framebuffer_vbs.cc  shader_objects.cc  triangle.cc
sdl3/samples/shaders/: basictex.frag  compile.sh  depth_buffered.vert  full_vert.vert  grad.comp  locvert.vert  pbr.frag  pbr.vert  textured.frag  triangle_buffered.vert
sdl3/samples/textures/: LICENSE.md
sdl3/vb/: vb.cc  vb.h  vbs.h
slang/: CMakeLists.txt  hello.slang  hello.spv  main.cc
vkhpp/: .clang-format  .gitignore  CMakeLists.txt  README.md  ext.cc  sample.cc  vki.cc  vki.h  vki_app.cc  vki_app.h
zig/: build.zig  build.zig.zon
zig-vma/: build.zig  build.zig.zon
zig-vma/src/: App.zig  main.zig  vulkan.zig
zig/src/: App.zig  app_init.zig  c.zig  init.zig  main.zig  viz.zig  vk.zig  vk_common.zig
